Add a menu to add redis servers

--- a/src/WinUi/Properties/launchSettings.json
+++ b/src/WinUi/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "WinUi (Package)": {
-      "commandName": "MsixPackage"
+      "commandName": "MsixPackage",
+      "nativeDebugging": false
     },
     "WinUi (Unpackaged)": {
       "commandName": "Project"
