--- a/src/WinUi/WinUi.csproj
+++ b/src/WinUi/WinUi.csproj
@@ -42,6 +42,9 @@
     <ProjectCapability Include="Msix" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Update="Assets\logo\logo.targetsize-16.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Content>
