--- a/src/WinUi/WinUi.csproj
+++ b/src/WinUi/WinUi.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="Pages\AddRedisServerDialog.xaml" />
+    <None Remove="Pages\ConnectedRedisServerPage.xaml" />
     <None Remove="Pages\RedisServers.xaml" />
   </ItemGroup>
 
@@ -30,8 +31,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.0" />
-    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.194" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.0-preview3" />
+    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22616-preview" />
     <PackageReference Include="StackExchange.Redis" Version="2.5.61" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
@@ -54,6 +55,9 @@
     <None Update="Assets\logo\spider.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <Page Update="Pages\ConnectedRedisServerPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="Pages\RedisServers.xaml">
