--- a/src/WinUi/WinUi.csproj
+++ b/src/WinUi/WinUi.csproj
@@ -31,9 +31,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.0-preview3" />
-    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22616-preview" />
-    <PackageReference Include="StackExchange.Redis" Version="2.5.61" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.25140-preview" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.45" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 
