--- a/src/WinUi/WinUi.csproj
+++ b/src/WinUi/WinUi.csproj
@@ -14,6 +14,22 @@
 	<AssemblyName>rui</AssemblyName>
 	<Nullable>enable</Nullable>
   </PropertyGroup>
+	
+  <PropertyGroup>
+		<GenerateAppInstallerFile>True</GenerateAppInstallerFile>
+	    <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
+	    <PackageCertificateThumbprint>F6DDAF929FAC825E54F1D9905C186CD2A1560761</PackageCertificateThumbprint>
+	    <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
+	    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+	    <AppxSymbolPackageEnabled>True</AppxSymbolPackageEnabled>
+	    <GenerateTestArtifacts>True</GenerateTestArtifacts>
+	    <AppxBundle>Auto</AppxBundle>
+	    <AppxBundlePlatforms>x86|x64</AppxBundlePlatforms>
+	    <AppInstallerUri>https://sharovarskyi.com/rui/installer</AppInstallerUri>
+	    <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
+	</PropertyGroup>	
+	
+	
   <ItemGroup>
     <Content Remove="Assets\logo\spider.ico" />
   </ItemGroup>
