--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,9 +19,12 @@ jobs:
         with:
           dotnet-version: 7.0.x
           include-prerelease: true
+      
+      - name: Setup MSBuild.exe
+        uses: microsoft/setup-msbuild@v1.0.2
 
       - name: Install dependencies
-        run: msbuild $env:Solution_Name /t:Restore /p:Configuration=Release
+        run: msbuild rui.sln /t:Restore /p:Configuration=Release
 
       - name: Decode the pfx
         run: |
