--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,4 +46,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: MSIX Package
-          path: Packages
+          path: src\WinUi\Packages
