--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,14 +35,20 @@ jobs:
           $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.BASE64_ENCODED_PFX }}")
           $certificatePath = "src\WinUi\GitHubActionsWorkflow.pfx"
           [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
+      - name: Set env
+        run: |
+          cd src\WinUi
+          $version = Powershell.exe -executionpolicy remotesigned -File "./find_version.ps1"
+          $version = $version + "." + ${{ env.GITHUB_RUN_NUMBER }} 
+          echo ("BUILD_VERSION=" + $version) >> $env:GITHUB_ENV
 
       - name: Create the app package
-        run: msbuild src\WinUi\WinUi.csproj /p:Configuration=Release /p:Platform=x64 /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle /p:PackageCertificateKeyFile=GitHubActionsWorkflow.pfx /p:AppxPackageDir="$env:Appx_Package_Dir" /p:GenerateAppxPackageOnBuild=true /p:VersionSuffix=$env:VersionSuffix
+        run: msbuild src\WinUi\WinUi.csproj /p:Configuration=Release /p:Platform=x64 /p:UapAppxPackageBuildMode=$env:Appx_Package_Build_Mode /p:AppxBundle=$env:Appx_Bundle /p:PackageCertificateKeyFile=GitHubActionsWorkflow.pfx /p:AppxPackageDir="$env:Appx_Package_Dir" /p:GenerateAppxPackageOnBuild=true /p:Version=$env:Version
         env:
           Appx_Bundle: Never
           Appx_Package_Build_Mode: SideloadOnly
           Appx_Package_Dir: Packages\
-          VersionSuffix: ${{ env.GITHUB_RUN_NUMBER }}
+          Version: ${{ env.BUILD_VERSION }}
 
       - name: Remove the pfx
         run: Remove-Item -path src\WinUi\GitHubActionsWorkflow.pfx
@@ -56,4 +62,5 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: ${{ env.BUILD_VERSION }}
           files: src\WinUi\Packages\**
