--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,6 +40,9 @@ jobs:
           cd src\WinUi
           $version = Powershell.exe -executionpolicy remotesigned -File "./find_version.ps1"
           $version = $version + "." + "$GITHUB_RUN_NUMBER"
+          echo $GITHUB_RUN_NUMBER
+          echo "$GITHUB_RUN_NUMBER"
+          echo "${{ env.GITHUB_RUN_NUMBER }}"
           echo ("BUILD_VERSION=" + $version) >> $env:GITHUB_ENV
 
       - name: Create the app package
