--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,7 +39,10 @@ jobs:
         run: |
           cd src\WinUi
           $version = Powershell.exe -executionpolicy remotesigned -File "./find_version.ps1"
-          $version = $version + "." + "$env:GITHUB_RUN_NUMBER"
+
+          $lastZero = $version.LastIndexOf(".0")
+          $version = $version.Substring(0, $lastZero) + "." + "$env:GITHUB_RUN_NUMBER"
+
           echo ("BUILD_VERSION=" + $version) >> $env:GITHUB_ENV
 
       - name: Create the app package
